test-api-deploy/env/local-dev-canary/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-api-canary
  labels:
    name: test-api-canary
