test-api-deploy/env/local-dev-canary/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-app-bg-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /test-api/canary/(/|$)(.*)
        pathType: Prefix
        backend:
          service: 
            name: test-api-service
            port:
              number: 80
